Display the labels properly on small viewports (fixes issue #45)

--- a/assets/admin/less/admin.less
+++ b/assets/admin/less/admin.less
@@ -28,10 +28,12 @@ General Scaffolding
 	padding: 2px 8px;
 	font-weight: bold;
 	color: #fff;
-	white-space: nowrap;
 	vertical-align: baseline;
 	background-color: #999;
 	border-radius: 3px;
+}
+.wpas-label + .wpas-label {
+	margin-top: 5px;
 }
 .wpas-lead {
 	font-size: 16px;
